kubernetes/mosquitto-manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - name: mosquitto
        image: eclipse-mosquitto
        ports:
        - containerPort: 8883
        - containerPort: 9001
        resources:
          limits:
            memory: 1Gi
            cpu: "1"
        volumeMounts:
        - mountPath: /mosquitto/config/mosquitto.conf
          subPath: mosquitto.conf
          name: config
        # - mountPath: /mosquitto/certs/
          # name: certs
        - mountPath: /mosquitto/data/
          name: data
        - mountPath: /mosquitto/config/password.txt
          subPath: password.txt
          name: mosquitto-password
      volumes:
      - name: config
        configMap:
          name: mosquitto-config
      - name: mosquitto-password
        configMap:
          name: mosquitto-password
      # - name: certs
      #   secret:
      #     secretName: mosquitto-certs
      - name: data
        persistentVolumeClaim:
          claimName: mosquitto-data
